cholera 0.1.98
----------------------------------------------------------------

consolidate functions, data and documentation


cholera 0.1.97
----------------------------------------------------------------

remove trimPaths()
replace fatalityLocator() with caseLocator()
amend and update neighborhoodWalking() and plot.walking()
remove neighborhoodSnow()
add addSnow()


cholera 0.1.96
----------------------------------------------------------------

add neighborhoodWalking()
add plot.walking() and summary.walking() methods
add plot.voronoi() and summary.voronoi() methods
remove trimPlot()


cholera 0.1.95
----------------------------------------------------------------

amend neighborhoodVoronoi()
add plot.voronoi()
add pumpCases() and pumpSummary() generics and implement "voronoi" methods
add roadLength()


cholera 0.1.94
----------------------------------------------------------------

add trimPaths()


cholera 0.1.93
----------------------------------------------------------------

add Pearson residuals and residual shading to Voronoi functions


cholera 0.1.92
----------------------------------------------------------------

add Pearson residuals to Voronoi functions (beta)


cholera 0.1.91
----------------------------------------------------------------

fix trimPlot()


cholera 0.1.9
----------------------------------------------------------------

add trimPlot()
deprecate neighborhoodObserved() and neighborhoodExpected()
add neighborhood.segments, pump.cases, neighborhood.segments.sp, pump.cases.sp
document snowColors()


cholera 0.1.8
----------------------------------------------------------------

add ability to plot "simulated" regular cases to walkingPath()
add text.size argument to addLandmarks()


cholera 0.1.7
----------------------------------------------------------------

add orthogonal area plot to neighborhoodSnow()
add segmentViewer()
add road.segments


cholera 0.1.6
----------------------------------------------------------------
