@@ -2,7 +2,7 @@ Package: cholera
 Type: Package
 Title: Amend, Augment and Aid Analysis of John Snow's Cholera Data
 Version: 0.1.98
-Date: 2017-02-11
+Date: 2017-02-13
 Authors@R: person("lindbrook", email = "lindbrook@gmail.com", role = c("aut", "cre"))
 Description: Amends errors, augments data and aids analysis of John Snow's 1854 cholera data.
 URL: https://github.com/lindbrook/cholera
