@@ -13,6 +13,7 @@ export(addSnow)
 export(addVoronoi)
 export(addWhitehead)
 export(caseLocator)
+export(fixFatalities)
 export(neighborhoodVoronoi)
 export(neighborhoodWalking)
 export(pumpCases)
@@ -22,5 +23,6 @@ export(snowColors)
 export(snowMap)
 export(streetNameLocator)
 export(streetNumberLocator)
+export(unstackFatalities)
 export(walkingPath)
 import(graphics)
