@@ -1,0 +1,14 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/unstack.R
+\name{fixFatalities}
+\alias{fixFatalities}
+\title{Fix apparent coding error in Dodson and Tobler's digitization of John Snow's cholera map.}
+\usage{
+fixFatalities()
+}
+\value{
+An R dataframe.
+}
+\description{
+Fixes two apparent coding errors using 3 misplaced cases
+}
